@@ -42,9 +42,9 @@ import org.apache.http.client.methods.HttpGet;
 import org.apache.http.entity.ContentType;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
-import org.jdom.Document;
-import org.jdom.Element;
-import org.jdom.Namespace;
+import org.jdom2.Document;
+import org.jdom2.Element;
+import org.jdom2.Namespace;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -95,6 +95,7 @@ public class PodcastService {
 
     public PodcastService() {
         ThreadFactory threadFactory = new ThreadFactory() {
+            @Override
             public Thread newThread(Runnable r) {
                 Thread t = Executors.defaultThreadFactory().newThread(r);
                 t.setDaemon(true);
@@ -126,6 +127,7 @@ public class PodcastService {
 
     public synchronized void schedule() {
         Runnable task = new Runnable() {
+            @Override
             public void run() {
                 LOG.info("Starting scheduled Podcast refresh.");
                 refreshAllChannels(true);
@@ -233,7 +235,7 @@ public class PodcastService {
     }
 
     private List<PodcastEpisode> filterAllowed(List<PodcastEpisode> episodes) {
-        List<PodcastEpisode> result = new ArrayList<PodcastEpisode>(episodes.size());
+        List<PodcastEpisode> result = new ArrayList<>(episodes.size());
         for (PodcastEpisode episode : episodes) {
             if (episode.getPath() == null || securityService.isReadAllowed(new File(episode.getPath()))) {
                 result.add(episode);
@@ -292,6 +294,7 @@ public class PodcastService {
     private void refreshChannels(final List<PodcastChannel> channels, final boolean downloadEpisodes) {
         for (final PodcastChannel channel : channels) {
             Runnable task = new Runnable() {
+                @Override
                 public void run() {
                     doRefreshChannel(channel, downloadEpisodes);
                 }
@@ -300,7 +303,6 @@ public class PodcastService {
         }
     }
 
-    @SuppressWarnings({"unchecked"})
     private void doRefreshChannel(PodcastChannel channel, boolean downloadEpisodes) {
         InputStream in = null;
 
@@ -409,6 +411,7 @@ public class PodcastService {
 
     public void downloadEpisode(final PodcastEpisode episode) {
         Runnable task = new Runnable() {
+            @Override
             public void run() {
                 doDownloadEpisode(episode);
             }
@@ -418,7 +421,7 @@ public class PodcastService {
 
     private void refreshEpisodes(PodcastChannel channel, List<Element> episodeElements) {
 
-        List<PodcastEpisode> episodes = new ArrayList<PodcastEpisode>();
+        List<PodcastEpisode> episodes = new ArrayList<>();
 
         for (Element episodeElement : episodeElements) {
 
@@ -447,7 +450,7 @@ public class PodcastService {
             if (getEpisodeByUrl(url) == null) {
                 Long length = null;
                 try {
-                    length = new Long(enclosure.getAttributeValue("length"));
+                    length = Long.valueOf(enclosure.getAttributeValue("length"));
                 } catch (Exception x) {
                     LOG.warn("Failed to parse enclosure length.", x);
                 }
@@ -462,17 +465,12 @@ public class PodcastService {
 
         // Sort episode in reverse chronological order (newest first)
         Collections.sort(episodes, new Comparator<PodcastEpisode>() {
+            @Override
             public int compare(PodcastEpisode a, PodcastEpisode b) {
                 long timeA = a.getPublishDate() == null ? 0L : a.getPublishDate().getTime();
                 long timeB = b.getPublishDate() == null ? 0L : b.getPublishDate().getTime();
 
-                if (timeA < timeB) {
-                    return 1;
-                }
-                if (timeA > timeB) {
-                    return -1;
-                }
-                return 0;
+                return Long.compare(timeB, timeA);
             }
         });
 
@@ -694,6 +692,10 @@ public class PodcastService {
     private File getChannelDirectory(PodcastChannel channel) {
         File podcastDir = new File(settingsService.getPodcastFolder());
         File channelDir = new File(podcastDir, StringUtil.fileSystemSafe(channel.getTitle()));
+
+        if (!podcastDir.canWrite()) {
+          throw new RuntimeException("The podcasts directory " + podcastDir + " isn't writeable.");
+        }
 
         if (!channelDir.exists()) {
             boolean ok = channelDir.mkdirs();
